timestamp on mp4 works on iphone! added margins to fix postform on mobile

--- a/src/components/postmodalform/postform.css
+++ b/src/components/postmodalform/postform.css
@@ -34,6 +34,9 @@ section {
   box-shadow: 0px 10px 20px #381057;
 }
 
+.postformHead{
+  margin-bottom: -75px;
+}
 
 section:nth-child(even) {
   background-color: #ddd;
